# new-gnuminki

./: CMakeLists.txt  LICENSE  areaOfEffect.cpp  areaOfEffect.h  bar.cpp  bar.h  board.cpp  board.h  changeling.cpp  changeling.h  game.cpp  game.h  highscore.sh  main.cpp  menu.cpp  menu.h  plant.cpp  plant.h  square.cpp  square.h  status.cpp  status.h  win.cpp  win.h
